<resources>
    <string name="app_name">Fastest Delivery</string>
    <string name="fastest_del">Fastest Delivery 24/7</string>
    <string name="sign_in">Sing In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_pas">Forgot password?</string>
    <string name="login">Login</string>
    <string name="fullName">Full name</string>
    <string name="phone">Phone number</string>
    <string name="register">Register Now</string>
    <string name="cancel">Cancel</string>

</resources>